chore: refactor repositories to have tenant in their method signatures